Tons of styling Lots of bug fixes Implemented lots of controls for nodes Made the config panel have a scrollbar when it needs to Piano has base frequeny exposed in config panel Labels for node controls Fixed isAnyOf behaviour Made node config titles stand out a bit more

--- a/styles/index.css
+++ b/styles/index.css
@@ -52,6 +52,7 @@ body {
   height: 98%;
   background-color: #1c1c1c;
   border-radius: 1em;
+  overflow-y:auto;
 }
 
 .config-knob {
